--- a/index.html
+++ b/index.html
@@ -1,1 +1,184 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yusra Khalid | Portfolio</title>
+    <style>
+        :root {
+            --primary: #2563eb; /* Professional Blue */
+            --dark: #1e293b;
+            --light: #f8fafc;
+            --text: #334155;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: var(--light);
+            color: var(--text);
+            line-height: 1.6;
+        }
+        /* Header Section */
+        header {
+            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
+            color: white;
+            padding: 4rem 2rem;
+            text-align: center;
+        }
+        header h1 { margin: 0; font-size: 3rem; font-weight: 700; }
+        header p { font-size: 1.25rem; opacity: 0.9; margin-top: 10px; }
+        .contact-btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 25px;
+            background-color: var(--primary);
+            color: white;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: bold;
+            transition: transform 0.2s;
+        }
+        .contact-btn:hover { transform: scale(1.05); }
 
+        /* Container */
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+
+        /* Sections */
+        section { margin-bottom: 3rem; }
+        h2 { color: var(--dark); border-bottom: 2px solid var(--primary); display: inline-block; padding-bottom: 5px; }
+
+        /* Project Cards */
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+        }
+        .card {
+            background: white;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            transition: transform 0.2s;
+            border-left: 5px solid var(--primary);
+        }
+        .card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px rgba(0,0,0,0.1); }
+        .card h3 { margin-top: 0; color: var(--dark); }
+        .card .tech {
+            font-size: 0.85rem;
+            color: var(--primary);
+            font-weight: bold;
+            background: #e0e7ff;
+            padding: 4px 8px;
+            border-radius: 4px;
+        }
+
+        /* Skills Tags */
+        .skills-container { display: flex; flex-wrap: wrap; gap: 10px; }
+        .skill-tag {
+            background: white;
+            padding: 8px 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            font-weight: 500;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 2rem;
+            background: var(--dark);
+            color: white;
+            font-size: 0.9rem;
+        }
+        footer a { color: #93c5fd; text-decoration: none; }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Yusra Khalid</h1>
+        <p>Computer & Information Systems Engineer</p>
+        <p><i>Building Intelligent Solutions with Web Dev & AI</i></p>
+        <a href="mailto:yusrakhalid825@gmail.com" class="contact-btn">Contact Me</a>
+        <a href="https://github.com/yusrakh" class="contact-btn" style="background-color: #333;">GitHub</a>
+    </header>
+
+    <div class="container">
+        
+        <section>
+            <h2>About Me</h2>
+            <p>
+                I am a final-year CIS student at NED University, passionate about merging Full-Stack Development with Machine Learning. 
+                I have experience building intelligent web applications using Django and Flask, and I am currently working on IoT-based gait monitoring for athletes.
+            </p>
+        </section>
+
+        <section>
+            <h2>Featured Projects</h2>
+            <div class="project-grid">
+                <div class="card">
+                    <h3>RunGait Pro (FYP)</h3>
+                    <p>Intelligent shoes for gait monitoring in athletes. Features a real-time dashboard to visualize foot strike patterns and prevent injuries.</p>
+                    <span class="tech">IoT & Python</span>
+                </div>
+
+                <div class="card">
+                    <h3>Weather Classification AI</h3>
+                    <p>A multiclass classifier predicting weather summaries (Clear, Rainy, Overcast) using historical data.</p>
+                    <span class="tech">Machine Learning</span>
+                </div>
+
+                <div class="card">
+                    <h3>Dynamic Bakery Site</h3>
+                    <p>A complete online bakery platform handling backend operations and orders efficiently.</p>
+                    <span class="tech">Django & MySQL</span>
+                </div>
+
+                <div class="card">
+                    <h3>Cart-Pole RL Agent</h3>
+                    <p>Solved the classic Cart-Pole problem using Reinforcement Learning (PPO algorithms).</p>
+                    <span class="tech">Reinforcement Learning</span>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Experience</h2>
+            <div class="card" style="margin-bottom: 15px;">
+                <h3>Intern | Pakistan Engineers Forum</h3>
+                <p><i>Dec 2024 - Present</i></p>
+                <p>Developing responsive CMS-based websites using WordPress and PHP/MySQL.</p>
+            </div>
+            <div class="card" style="margin-bottom: 15px;">
+                <h3>Intern | Resolve-Suparco</h3>
+                <p><i>July 2025 - Aug 2025</i></p>
+                <p>Worked on advanced Reinforcement Learning projects and gained hands-on technical experience.</p>
+            </div>
+        </section>
+
+        <section>
+            <h2>Technical Skills</h2>
+            <div class="skills-container">
+                <span class="skill-tag">Python</span>
+                <span class="skill-tag">Django & Flask</span>
+                <span class="skill-tag">Machine Learning</span>
+                <span class="skill-tag">MySQL</span>
+                <span class="skill-tag">Git & Ubuntu</span>
+                <span class="skill-tag">PCB Design</span>
+            </div>
+        </section>
+
+    </div>
+
+    <footer>
+        <p>© 2025 Yusra Khalid. Hosted on GitHub Pages.</p>
+        <p><a href="https://linkedin.com/">Connect on LinkedIn</a></p>
+    </footer>
+
+</body>
+</html>
