--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         
         <div class="hidden" style="margin-top: 50px; display: flex; justify-content: space-between; color: #555;">
             <span>© 2025 Yusra Khalid</span>
-            <span><a href="https://github.com/yusrakh">GitHub</a> &nbsp; / &nbsp; <a href="#">LinkedIn</a></span>
+            <span><a href="https://github.com/yusrakh">GitHub</a> &nbsp; / &nbsp; <a href="www.linkedin.com/in/yusra-khalid-294795279">LinkedIn</a></span>
         </div>
     </section>
 
