--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         </div>
         
         <div class="hero-image-container animate-load" style="animation-delay: 0.5s;">
-            <img src="https://via.placeholder.com/500x600/cccccc/969696?text=Your+Image" alt="Yusra Khalid" class="hero-image">
+            <img src="https://img.freepik.com/free-photo/flat-lay-workstation-with-copy-space-laptop_23-2148430879.jpg?semt=ais_hybrid&w=740&q=80" class="hero-image">
         </div>
 
         <div class="hero-bottom-right animate-load" style="animation-delay: 0.6s;">
